--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -21,14 +21,6 @@ http://www.templatemo.com/preview/templatemo_421_raleway
     clear: both;
 }
 
-.blue {
-	color: #3CF;
-}
-
-.green {
-	color: #0F0;
-}
-
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video {
     margin: 0;
     padding: 0;
@@ -154,7 +146,7 @@ ul.main-menu li a {
 }
 
 ul.main-menu li a.active {
-    background: #4e91c9;
+    background: #909294;
     color: #fff;
 }
 
