--- a/css/contato.css
+++ b/css/contato.css
@@ -1,57 +1,110 @@
-/*   
-  Project by Zua 
-  https://github.com/thatziv/webhook 
-*/
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+:root {
+    --primary-color: #fd951f;
+    --bg-color: #130f0d;
+    --text-color: #f0f0f5;
+    --light-color: rgba(255, 255, 255, 0.04);
+}
+
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    font-family: 'Roboto Condensed', sans-serif;
+html {
+    font-family: "Roboto", sans-serif;
+    height: 100%;
+}
+
+body {
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+
+    background-color: #130f0d;
+    color: #f0f0f5;
+}
+
+form {
+    background: rgba(255, 255, 255, 0.03);
+
+    width: 100%;
+    max-width: 500px;
+
+    margin: 32px auto;
+    padding: 32px 64px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+form h2 {
+    margin-bottom: 32px;
+}
+
+div.input {
+    margin-bottom: 24px;
+    position: relative;
+}
+
+input,
+button {
+    /* reset appeareance */
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+
+    /* box */
+    width: 100%;
+
+    padding: 16px 0;
+
+    border:none;
+    border-bottom: 1px solid var(--primary-color);
+
+    background-color: transparent;
+
+    outline: none;
+
+    /* text */
+    color: var(--text-color);
+    font-size: 1em;
+
+}
+
+button {
+    margin-top: 16px;
+    background-color: var(--primary-color);
+}
+
+input ~ label {
+    position: absolute;
+    top: 16px;
+    left: 0;
+
+    color: rgba(255, 255, 255, 0.6) ;
+
+    transition: .4s;
+}
+
+input:focus ~ label,
+input:valid ~ label {
+    transform: translateY(-24px);
+    font-size: 0.8em;
+    letter-spacing: 0.1em;
 }
 
 
+.input span.error {
+    display: flex;
+    
+    padding: 0;
 
-
-
-
-
-
-.center-align {
-    text-align: center;
+    background-color: rgba(255, 0, 0, 0.2);
 }
 
-
-
-
-#link, #username, #content, #avatar {
-    font-size: 25px;
-    background-color: #4e4e4e;
-    width: 25%;
-    padding: 10px;
-    border: 2px solid #000000c9;
-}
-
-#btn {
-    width: 25%;
-    font-size: 25px;
-    margin-top: 25px;
-    padding: 17px;
-    background-color:grey;
-    border: 2px solid #000000c9;
-    color: black;
-}
-
-#btn:hover { 
-    background-color: #353333;
-    color: white;
-}
-
-#log {
-    text-align: center;
-    width: 5%;
-    background-color: rgb(110, 255, 43);
-    color: green;
-}
-
-h1 {
-    text-align: center;
+.input span.error.active {
+    border: 1px solid red;
+    padding: 0.4em;
 }
